# kabanner

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  dc
docker/: Dockerfile  docker-compose.yml
kb-api/: Cargo.toml
kb-api/src/: main.rs
kb-api/src/routes/: user.rs
kb-migrations/: Cargo.toml
kb-migrations/src/: m20220101_000001_create_table.rs
pkg/kb-api/: Cargo.toml
pkg/kb-api/src/: main.rs  pool.rs
pkg/kb-api/src/routes/: board.rs  user.rs
pkg/kb-entities/: Cargo.toml
pkg/kb-entities/src/: board.rs  lib.rs  prelude.rs  user.rs
pkg/kb-migrations/: Cargo.toml
pkg/kb-migrations/src/: lib.rs  m20230106_162538_create_boards_table.rs  main.rs
