[package]
name = "kb-migrations"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "kb_migrations"
path = "src/lib.rs"

[dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "^0.10.0"
features = [
  "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  "sqlx-mysql",            # `DATABASE_DRIVER` feature
]
